# wArgs

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COST.md  DEPLOYMENT-GUIDE.md  DOCS-DEPLOYMENT-SUMMARY.md  LICENSE  README.md  ROADMAP.md  TODO.md  WIKI-UPDATE-SUMMARY.md  _README.md  cleanup.sh  index.html  invoice.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  standups.md  tox.ini
.claude/: cost-log.json
.github/ISSUE_TEMPLATE/: feature_request.yml
_wiki/: Contributing-to-Wiki.md  Django-Management-Commands.md  README.md  SETUP-GUIDE.md
api/decorators/: index.html
api/exceptions/: index.html
api/types/: index.html
api/utilities/: index.html
benchmarks/: benchmark_basic.py
changelog/: index.html
community/resources/: index.html
cookbook/migration-argparse/: index.html
cookbook/migration-click/: index.html
cookbook/patterns/: index.html
cookbook/testing/: index.html
docs/: changelog.md  examples.md  faq.md  index.md  troubleshooting.md
docs/api/: decorators.md  exceptions.md  types.md  utilities.md
docs/community/: resources.md
docs/cookbook/: migration-argparse.md  migration-click.md  patterns.md  testing.md
docs/getting-started/: installation.md  quickstart.md  tutorial.md
docs/guide/: advanced.md  basic-usage.md  docstrings.md  inheritance.md  subcommands.md  type-system.md
docs/integrations/: flask.md  index.md
docs/tutorials/: database-cli.md  file-manager-cli.md  index.md  system-monitor-cli.md  web-scraper-cli.md
examples/: README.md  index.html
examples/advanced/: custom_types.py
examples/inheritance/: mixins.py
examples/mine/: test.py
examples/simple/: greet.py
examples/subcommands/: git_clone.py
examples/tutorials/: dbcli.py  filemanager.py  sysmonitor.py  webscraper.py
examples/typed/: process.py
faq/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/tutorial/: index.html
guide/advanced/: index.html
guide/basic-usage/: index.html
guide/docstrings/: index.html
guide/inheritance/: index.html
guide/subcommands/: index.html
guide/type-system/: index.html
integrations/: index.html
integrations/django/: index.html
integrations/flask/: index.html
planning/: PRD-Backend.md  PRD-Features.md  PRD-Frontend.md  PRD-Integration.md  PRD-Operations.md  PRD-Product.md  PRD-Security.md  PRD-Technical.md  PRD-Testing.md  PRD-UX.md  PRD.md  implementation-plan.md
search/: search_index.json
tests/: __init__.py  conftest.py
tests/property/: __init__.py  test_type_roundtrip.py
tests/unit/: __init__.py  test_arg.py  test_config.py  test_decorator.py  test_exceptions.py  test_utilities.py
tests/unit/builders/: __init__.py  test_arguments.py  test_parser.py  test_subcommands.py
tests/unit/completion/: __init__.py  test_completion.py
tests/unit/converters/: __init__.py  test_builtin.py  test_dataclasses.py  test_registry.py
tests/unit/core/: __init__.py  test_groups.py
tests/unit/introspection/: __init__.py  test_docstrings.py  test_mro.py  test_signatures.py  test_types.py
tests/unit/plugins/: test_plugins.py
troubleshooting/: index.html
tutorials/: index.html
tutorials/database-cli/: index.html
tutorials/file-manager-cli/: index.html
tutorials/system-monitor-cli/: index.html
tutorials/web-scraper-cli/: index.html
wargs/: __init__.py  _version.py  decorator.py  utilities.py
wargs/builders/: __init__.py  arguments.py  parser.py  subcommands.py
wargs/completion/: __init__.py  bash.py  fish.py  generator.py  zsh.py
wargs/converters/: __init__.py  builtin.py  dataclasses.py  registry.py
wargs/core/: __init__.py  arg.py  config.py  exceptions.py  groups.py
wargs/introspection/: __init__.py  docstrings.py  mro.py  signatures.py  types.py
wargs/plugins/: __init__.py  interface.py  registry.py
wiki/: Building-a-Database-CLI.md  Building-a-File-Manager-CLI.md  Building-a-System-Monitor-CLI.md  Building-a-Web-Scraper-CLI.md  Home.md  IMPLEMENTATION-STATUS.md
