[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wArgs"
dynamic = ["version"]
description = "Decorator-based argparse automation. Just decorate and you're done."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "wArgs Contributors" }
]
dependencies = [
    "importlib_metadata>=4.6; python_version < '3.10'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
]
keywords = ["argparse", "cli", "decorator", "arguments", "command-line", "typing"]

[project.urls]
Homepage = "https://github.com/wargs/wargs"
Documentation = "https://wargs.readthedocs.io"
Repository = "https://github.com/wargs/wargs"
Issues = "https://github.com/wargs/wargs/issues"
Changelog = "https://github.com/wargs/wargs/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "pytest-randomly>=3.15",
    "hypothesis>=6.100",
    "mypy>=1.8",
    "ruff>=0.5",
    "tox>=4.0",
    "pre-commit>=3.6",
    "build>=1.0",
    "twine>=5.0",
    "importlib_metadata>=4.6",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = ["wArgs[dev,docs]"]

[tool.hatch.version]
path = "wArgs/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["wArgs"]

[tool.hatch.build.targets.sdist]
include = [
    "/wArgs",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p", "no:cacheprovider",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
filterwarnings = [
    "error",
]

# coverage configuration
[tool.coverage.run]
source = ["wArgs"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
fail_under = 97
show_missing = true
skip_covered = true

[tool.coverage.paths]
source = [
    "wArgs/",
]

# mypy configuration
[tool.mypy]
python_version = "3.9"  # mypy 1.19+ requires 3.9+; code still supports 3.8
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "importlib_metadata"
ignore_missing_imports = true

# ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 88
src = ["wArgs", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in tests)
    "PTH",    # pathlib suggestions (os.path is fine)
    "TC001",  # type-checking block suggestions (app imports are fine at runtime)
    "TC003",  # type-checking block suggestions (stdlib imports are fine at runtime)
]

[tool.ruff.lint.isort]
known-first-party = ["wArgs"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "ARG002", "ARG005", "S101"]

# hypothesis configuration
[tool.hypothesis]
deadline = 500
max_examples = 100
